r71 (29. 07. 2022):
Added Berserker buff
Fixed an issue where camera loop tracker is still visible after the looped camera was destroyed
Buluc's Mansion: Added achievement tracker for "Everything but the Patio Furniture"

r70 (22. 07. 2022):
Fixed Stoic buffs
Black Cat: Added achievement tracker for "One Claw Beam Cutter"

r69 (18. 07. 2022):
Added inspire boost cooldown buff
Shadow Raid: Added trackers for achievements

r68 (15. 07. 2022):
Added "Show 'Achievement Started' Popup" option
Added "Show 'CONVERT KILLED' Message" option
Possible fix for a very rare crash after a convert died

r67 (04. 07. 2022):
Fixed Maniac buffs
Fixed an issue where after finishing or losing a heist in custody increased XP in tracker/popup
Heat Street: Fixed a tracker with no icon
Heat Street: Fixed an issue where gas counter tracker hide itself after shooting first gas canister
Slaughterhouse: Added achievement tracker for "Not hard enough"

r66 (22. 06. 2022):
Midland Ranch: Fixed a log spam after plane missed fulton cage
Midland Ranch: Fixed an issue where achievement tracker for "Lucky Streak" also counted loot bags when it shouldn't

r65 (21. 06. 2022):
Added trackers for Midland Ranch Heist

r64 (20. 06. 2022):
Minor optimization in tracker reorganization
Fixed a regression that caused some progress trackers to miscalculate the current progress after dropin
Fixed an issue where "The Reckoning" achievement tracker is visible when you dropped-in
Show Timers: Fixed a possible tracker and waypoint icon corruption after dropin
Minion Tracker: Fixed reorganization issues
Trade Delay Tracker: Fixed reorganization issues
Birth of Sky: "Expert Landing" achievement will now show 1 tracker, not 2
Undercover: Fixed an issue with "The Saviour" achievement tracker where it showed wrong progress after dropin

r63 (03. 06. 2022):
Big Oil Day 2: Fixed an issue where "Pager Count Tracker" is not visible

r62 (29. 05. 2022):
Dragon Heist: Fixed a game freeze

r61 (28. 05. 2022):
Updated Heli icon