@@ -23,6 +23,7 @@
     "ehi_achievement_pass" : "PASS",
     "ehi_achievement_finish" : "FINISH",
     "ehi_achievement_destroy" : "DESTROY",
+    "ehi_achievement_defend" : "DEFEND",
     "ehi_achievement_ready" : "READY",
     "ehi_achievement_loud" : "LOUD",
     "ehi_achievement_push" : "PUSH",
