@@ -1,3 +1,4 @@
+local EHI = EHI
 local Icon = EHI.Icons
 local SF = EHI.SpecialFunctions
 local TT = EHI.Trackers
@@ -19,7 +20,7 @@ else
 end
 
 EHI:ParseTriggers(triggers)
-EHI:ShowLootCounter(9)
+--EHI:ShowLootCounter(9)
 if show_achievement and ovk_and_up then
     EHI:AddLoadSyncFunction(function(self)
         self:AddTimedAchievementTracker("born_5", 120)
